--- a/Stylesheets/Global_NetAdminIPtable.css
+++ b/Stylesheets/Global_NetAdminIPtable.css
@@ -8,22 +8,24 @@
   *  CSS創作者：林博仁(Henry Lin, pika1021@gmail.com)
   *  此CSS使用的智慧財產授權：自由使用(free)
   * 已知問題：
-  * 
+  *
   * 待辦事項：
-  * 
+  *
   * 變更紀錄：
-  * 
+  *
   */
- 
- @media screen{
+  #div_content{
+    width:50%;
+    margin:0 auto;
+  }
+  @media screen{
 
 
- }
- @media print{
+  }
+  @media print{
    /*通用body樣式*/
-   .generic_body{
+    .generic_body{
      /*透明背景*/
      background-color:transparent;
-   }
+    }
  }
- 
